--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h2>
 <a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h2>
 
-<p>For an example look at tests/index.html</p>
+<p>For an example look at <a href="test.html">tests/index.html</a></p>
 
 <h1>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h1>
