--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Test for Fake Pseudo Classes</title>
-    <link href="https://raw.githubusercontent.com/justb81/jsFakePseudoClasses/master/tests/style.css" type="text/css" rel="stylesheet" media="screen">
+    <link href="stylesheets/test-style.css" type="text/css" rel="stylesheet" media="screen">
 </head>
 <body>
 <h1>Headline</h1>
@@ -36,6 +36,6 @@
     <h2>Subheadline 3</h2>
     <p>Lorem Ipsum Dolor et amet</p>
 </section>
-<script type="application/javascript" src="https://raw.githubusercontent.com/justb81/jsFakePseudoClasses/master/src/fake-pseudo-classes.js" data-debug="true"></script>
+<script src="javascripts/test-javascript.js" data-debug="true"></script>
 </body>
 </html>
